enable vercel analytics

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.6.1",
     "next": "^16.1.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
@@ -21,7 +22,7 @@
     "eslint": "^9",
     "eslint-config-next": "^16.1.1",
     "postcss": "^8.5.6",
-    "tailwind": "^4.0.0",
+    "tailwind": "^2.3.1",
     "tailwindcss": "^4"
   }
 }
